--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         <article class="block">
           <h1>Portfolio</h1>
           <hr />
-          <div class="card mb-3" style="width: 500px; float: left;">
+          <div class="card mb-3 left">
             <div class="row no-gutters">
               <div class="col-md-4">
                 <a href="Resume for Jacob Beeson.pdf" target="_blank">
@@ -60,7 +60,7 @@
             </div>
           </div>
 
-          <div class="card mb-3" style="max-width: 500px; float:right;">
+          <div class="card mb-3 right">
             <div class="row no-gutters">
               <div class="col-md-8">
                 <div class="card-body">
@@ -74,7 +74,7 @@
             </div>
           </div>
 
-          <div class="card mb-3" style="max-width: 500px; float: left;">
+          <div class="card mb-3 left">
             <div class="row no-gutters">
               <div class="col-md-4">
                 <img src="images/notw.jpg" class="card-img" alt="Image unavailable" style="width: 166px; height: 188px;">
@@ -88,7 +88,7 @@
             </div>
           </div>
 
-          <div class="card mb-3" style="max-width: 500px; float:right;">
+          <div class="card mb-3 right">
             <div class="row no-gutters">
               <div class="col-md-8">
                 <div class="card-body">
@@ -104,7 +104,7 @@
             </div>
           </div>
 
-          <div class="card mb-3" style="max-width: 500px; float: left;">
+          <div class="card mb-3 left">
             <div class="row no-gutters">
               <div class="col-md-4">
                 <img src="images/serval.jpg" class="card-img" alt="Image unavailable" style="width: 166px; height: 188px;">
@@ -118,7 +118,7 @@
             </div>
           </div>
 
-          <div class="card mb-3" style="max-width: 500px; float:right;">
+          <div class="card mb-3 right">
             <div class="row no-gutters">
               <div class="col-md-8">
                 <div class="card-body">
